ajuste de html/css/js

--- a/modules/web/portifolio-cientista-dados/app/templates/singup.html
+++ b/modules/web/portifolio-cientista-dados/app/templates/singup.html
@@ -2,8 +2,8 @@
 
 {% block script %}
 <link rel="stylesheet" href="../static/css/singup.css">
-<script src="../static/js/jquery-1.11.2.js"></script>
-<script src="../static/js/singUp.js"></script>
+<script src="../static/js/jquery-3.3.1.min.js"></script>
+<script src="../static/js/singup.js"></script>
 {% endblock %}
 
 {% block body %}
